# AutoEIA

./: README.md  app.py  pyproject.toml
infrastructure/: infrastructure_stack.py
infrastructure/api/: index.py  requirements.txt
infrastructure/api/api_handler/: index.py
infrastructure/api/api_handler/models/: README.md  __init__.py  job.py  noop_job.py  shadow_study_job.py
infrastructure/api/types/: job.py  noop_job.py  shadow_study_job.py
infrastructure/handler_jobs/: index.py
tests/unit/: test_api.py  test_jobs_handler.py
