[tool.poetry]
name = "auto_eia"
version = "0.1.0"
description = ""
authors = ["Max Dumas <max@dumas.nyc>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "2.50.0"
"aws-cdk.aws-apigatewayv2-alpha" = "2.50.0-alpha.0"
"aws-cdk.aws-apigatewayv2-integrations-alpha" = "2.50.0-alpha.0"
"aws-cdk.aws-lambda-python-alpha" = "2.50.0-alpha.0"
constructs = "^10"
boto3 = "^1.26.4"
fastapi = "^0.86.0"
mangum = "^0.16.0"
pydantic = "^1.10.2"
types-boto3 = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = "^22.10.0"
mypy = "^0.990"
pylint = "^2.15.5"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.pylint]
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
